ball & plate update

--- a/CameraDriver.ioc
+++ b/CameraDriver.ioc
@@ -435,7 +435,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=E\:/My works File/STM32Cube File/STM32CubeUpdate/STM32Cube_FW_F7_V1.7.0
+ProjectManager.CustomerFirmwarePackage=C\:/Users/dengy/STM32Cube/Repository/STM32Cube_FW_F7_V1.7.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F746IGTx
@@ -450,7 +450,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=CameraDriver.ioc
 ProjectManager.ProjectName=CameraDriver
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
