--- a/CameraDriver.ioc
+++ b/CameraDriver.ioc
@@ -39,97 +39,89 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DCMI
-Mcu.IP10=TIM10
-Mcu.IP11=TIM11
-Mcu.IP12=USART1
-Mcu.IP13=USART3
+Mcu.IP10=USART1
+Mcu.IP11=USART2
 Mcu.IP2=DMA
 Mcu.IP3=FMC
 Mcu.IP4=I2C2
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
-Mcu.IP7=SPI1
-Mcu.IP8=SYS
+Mcu.IP7=SYS
+Mcu.IP8=TIM3
 Mcu.IP9=TIM7
-Mcu.IPNb=14
+Mcu.IPNb=12
 Mcu.Name=STM32F746I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PF0
 Mcu.Pin1=PF1
-Mcu.Pin10=PH5
-Mcu.Pin11=PA3
-Mcu.Pin12=PA4
-Mcu.Pin13=PA5
-Mcu.Pin14=PA6
-Mcu.Pin15=PA7
-Mcu.Pin16=PB0
-Mcu.Pin17=PB1
-Mcu.Pin18=PF11
-Mcu.Pin19=PF12
+Mcu.Pin10=PA6
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PF11
+Mcu.Pin15=PF12
+Mcu.Pin16=PF13
+Mcu.Pin17=PF14
+Mcu.Pin18=PF15
+Mcu.Pin19=PG0
 Mcu.Pin2=PF2
-Mcu.Pin20=PF13
-Mcu.Pin21=PF14
-Mcu.Pin22=PF15
-Mcu.Pin23=PG0
-Mcu.Pin24=PG1
-Mcu.Pin25=PE7
-Mcu.Pin26=PE8
-Mcu.Pin27=PE9
-Mcu.Pin28=PE10
-Mcu.Pin29=PE11
+Mcu.Pin20=PG1
+Mcu.Pin21=PE7
+Mcu.Pin22=PE8
+Mcu.Pin23=PE9
+Mcu.Pin24=PE10
+Mcu.Pin25=PE11
+Mcu.Pin26=PE12
+Mcu.Pin27=PE13
+Mcu.Pin28=PE14
+Mcu.Pin29=PE15
 Mcu.Pin3=PF3
-Mcu.Pin30=PE12
-Mcu.Pin31=PE13
-Mcu.Pin32=PE14
-Mcu.Pin33=PE15
-Mcu.Pin34=PB10
-Mcu.Pin35=PB11
-Mcu.Pin36=PH6
-Mcu.Pin37=PH7
-Mcu.Pin38=PH11
-Mcu.Pin39=PH12
+Mcu.Pin30=PB10
+Mcu.Pin31=PB11
+Mcu.Pin32=PH6
+Mcu.Pin33=PH7
+Mcu.Pin34=PH11
+Mcu.Pin35=PH12
+Mcu.Pin36=PD8
+Mcu.Pin37=PD9
+Mcu.Pin38=PD10
+Mcu.Pin39=PD14
 Mcu.Pin4=PF4
-Mcu.Pin40=PD8
-Mcu.Pin41=PD9
-Mcu.Pin42=PD10
-Mcu.Pin43=PD14
-Mcu.Pin44=PD15
-Mcu.Pin45=PG2
-Mcu.Pin46=PG3
-Mcu.Pin47=PG4
-Mcu.Pin48=PG5
-Mcu.Pin49=PG6
+Mcu.Pin40=PD15
+Mcu.Pin41=PG4
+Mcu.Pin42=PG5
+Mcu.Pin43=PG8
+Mcu.Pin44=PC6
+Mcu.Pin45=PC7
+Mcu.Pin46=PC8
+Mcu.Pin47=PC9
+Mcu.Pin48=PA8
+Mcu.Pin49=PA9
 Mcu.Pin5=PF5
-Mcu.Pin50=PG7
-Mcu.Pin51=PG8
-Mcu.Pin52=PC6
-Mcu.Pin53=PC7
-Mcu.Pin54=PA8
-Mcu.Pin55=PA9
-Mcu.Pin56=PA10
-Mcu.Pin57=PH14
-Mcu.Pin58=PC10
-Mcu.Pin59=PC11
-Mcu.Pin6=PF6
-Mcu.Pin60=PD0
-Mcu.Pin61=PD1
-Mcu.Pin62=PD3
-Mcu.Pin63=PG9
-Mcu.Pin64=PG15
-Mcu.Pin65=PB6
-Mcu.Pin66=PB7
-Mcu.Pin67=PB8
-Mcu.Pin68=PB9
-Mcu.Pin69=PE0
-Mcu.Pin7=PF7
-Mcu.Pin70=PE1
-Mcu.Pin71=VP_SYS_VS_Systick
-Mcu.Pin72=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin73=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin74=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin8=PH0/OSC_IN
-Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=75
+Mcu.Pin50=PA10
+Mcu.Pin51=PH14
+Mcu.Pin52=PD0
+Mcu.Pin53=PD1
+Mcu.Pin54=PD3
+Mcu.Pin55=PD5
+Mcu.Pin56=PD6
+Mcu.Pin57=PG9
+Mcu.Pin58=PG15
+Mcu.Pin59=PB4
+Mcu.Pin6=PH0/OSC_IN
+Mcu.Pin60=PB5
+Mcu.Pin61=PB6
+Mcu.Pin62=PB7
+Mcu.Pin63=PB8
+Mcu.Pin64=PB9
+Mcu.Pin65=PE0
+Mcu.Pin66=PE1
+Mcu.Pin67=VP_SYS_VS_Systick
+Mcu.Pin68=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin7=PH1/OSC_OUT
+Mcu.Pin8=PH5
+Mcu.Pin9=PA4
+Mcu.PinsNb=69
 Mcu.UserConstants=
 Mcu.UserName=STM32F746IGTx
 MxCube.Version=4.22.0
@@ -138,9 +130,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -149,28 +138,15 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM7_IRQn=true\:4\:0\:true\:false\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=WiFi_Rx
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=OLED_CS
-PA3.Locked=true
-PA3.Signal=GPIO_Output
 PA4.Mode=Slave_8_bits_External_Synchro
 PA4.Signal=DCMI_HSYNC
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=OLED_SCL
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
-PA5.Signal=SPI1_SCK
 PA6.Mode=Slave_8_bits_External_Synchro
 PA6.Signal=DCMI_PIXCLK
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=OLED_SDA
-PA7.Mode=TX_Only_Simplex_Unidirect_Master
-PA7.Signal=SPI1_MOSI
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
 PA9.GPIOParameters=GPIO_Label
@@ -191,6 +167,18 @@ PB10.Signal=I2C2_SCL
 PB11.Locked=true
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=OLED_CS
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=MOTOR_Y_Driver
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=MOTOR_X_Driver
+PB5.Locked=true
+PB5.Signal=S_TIM3_CH2
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=MPU6050_SCL
 PB6.Locked=true
@@ -205,20 +193,20 @@ PB8.Signal=DCMI_D6
 PB9.Locked=true
 PB9.Mode=Slave_8_bits_External_Synchro
 PB9.Signal=DCMI_D7
-PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=Bluetooth_Tx
-PC10.Mode=Asynchronous
-PC10.Signal=USART3_TX
-PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=Bluetooth_Rx
-PC11.Mode=Asynchronous
-PC11.Signal=USART3_RX
 PC6.Locked=true
 PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
 PC7.Locked=true
 PC7.Mode=Slave_8_bits_External_Synchro
 PC7.Signal=DCMI_D1
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=OLED_SDA
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=OLED_SCL
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F7x6
 PCC.MCU=STM32F746I(E-G)Tx
@@ -250,6 +238,16 @@ PD15.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PD15.Signal=FMC_D1_DA1
 PD3.Mode=Slave_8_bits_External_Synchro
 PD3.Signal=DCMI_D5
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=Bluetooth_TX
+PD5.Locked=true
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=Bluetooth_RX
+PD6.Locked=true
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
 PD8.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default
 PD8.GPIO_PuPd=GPIO_PULLUP
 PD8.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
@@ -348,10 +346,6 @@ PF5.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default
 PF5.GPIO_PuPd=GPIO_PULLUP
 PF5.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PF5.Signal=FMC_A5
-PF6.Locked=true
-PF6.Signal=S_TIM10_CH1
-PF7.Locked=true
-PF7.Signal=S_TIM11_CH1
 PG0.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default
 PG0.GPIO_PuPd=GPIO_PULLUP
 PG0.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
@@ -364,18 +358,6 @@ PG15.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default
 PG15.GPIO_PuPd=GPIO_PULLUP
 PG15.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PG15.Signal=FMC_SDNCAS
-PG2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PG2.GPIO_Label=REMOTE_A
-PG2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PG2.GPIO_PuPd=GPIO_PULLDOWN
-PG2.Locked=true
-PG2.Signal=GPXTI2
-PG3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PG3.GPIO_Label=REMOTE_B
-PG3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PG3.GPIO_PuPd=GPIO_PULLDOWN
-PG3.Locked=true
-PG3.Signal=GPXTI3
 PG4.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default
 PG4.GPIO_PuPd=GPIO_PULLUP
 PG4.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
@@ -384,18 +366,6 @@ PG5.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default
 PG5.GPIO_PuPd=GPIO_PULLUP
 PG5.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PG5.Signal=FMC_A15_BA1
-PG6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PG6.GPIO_Label=REMOTE_C
-PG6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PG6.GPIO_PuPd=GPIO_PULLDOWN
-PG6.Locked=true
-PG6.Signal=GPXTI6
-PG7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PG7.GPIO_Label=REMOTE_D
-PG7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PG7.GPIO_PuPd=GPIO_PULLDOWN
-PG7.Locked=true
-PG7.Signal=GPXTI7
 PG8.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default
 PG8.GPIO_PuPd=GPIO_PULLUP
 PG8.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
@@ -435,7 +405,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=C\:/Users/dengy/STM32Cube/Repository/STM32Cube_FW_F7_V1.7.0
+ProjectManager.CustomerFirmwarePackage=E\:/My works File/STM32Cube File/STM32CubeUpdate/STM32Cube_FW_F7_V1.7.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F746IGTx
@@ -454,7 +424,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_DCMI_Init-DCMI-false-HAL,5-MX_I2C2_Init-I2C2-false-HAL,6-MX_USART1_UART_Init-USART1-false-HAL,7-MX_FMC_Init-FMC-false-HAL,8-MX_TIM7_Init-TIM7-false-HAL,9-MX_USART3_UART_Init-USART3-false-HAL,10-MX_SPI1_Init-SPI1-false-HAL,11-MX_TIM10_Init-TIM10-false-HAL,12-MX_TIM11_Init-TIM11-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_DCMI_Init-DCMI-false-HAL,5-MX_I2C2_Init-I2C2-false-HAL,6-MX_FMC_Init-FMC-false-HAL,7-MX_TIM7_Init-TIM7-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_USART1_UART_Init-USART1-false-HAL,10-MX_USART2_UART_Init-USART2-false-HAL
 RCC.AHBFreq_Value=200000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=50000000
@@ -588,50 +558,27 @@ SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
 SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
-SH.GPXTI2.0=GPIO_EXTI2
-SH.GPXTI2.ConfNb=1
-SH.GPXTI3.0=GPIO_EXTI3
-SH.GPXTI3.ConfNb=1
-SH.GPXTI6.0=GPIO_EXTI6
-SH.GPXTI6.ConfNb=1
-SH.GPXTI7.0=GPIO_EXTI7
-SH.GPXTI7.ConfNb=1
-SH.S_TIM10_CH1.0=TIM10_CH1,PWM Generation1 CH1
-SH.S_TIM10_CH1.ConfNb=1
-SH.S_TIM11_CH1.0=TIM11_CH1,PWM Generation1 CH1
-SH.S_TIM11_CH1.ConfNb=1
-SPI1.CalculateBaudRate=50.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
-TIM10.Channel=TIM_CHANNEL_1
-TIM10.IPParameters=Channel,Prescaler,Period
-TIM10.Period=10000-1
-TIM10.Prescaler=100-1
-TIM11.Channel=TIM_CHANNEL_1
-TIM11.IPParameters=Channel,Prescaler,Period
-TIM11.Period=10000-1
-TIM11.Prescaler=100-1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
+TIM3.Period=1000-1
+TIM3.Prescaler=200-1
+TIM3.Pulse-PWM\ Generation1\ CH1=500
+TIM3.Pulse-PWM\ Generation2\ CH2=500
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=1000-1
 TIM7.Prescaler=100-1
-USART1.BaudRate=115200
-USART1.DMADisableonRxErrorParam=UART_ADVFEATURE_DMA_DISABLEONRXERROR
-USART1.IPParameters=VirtualMode-Asynchronous,WordLength,BaudRate,DMADisableonRxErrorParam,OverrunDisableParam
-USART1.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
+USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART1.WordLength=WORDLENGTH_8B
-USART3.IPParameters=VirtualMode-Asynchronous,WordLength
-USART3.VirtualMode-Asynchronous=VM_ASYNC
-USART3.WordLength=WORDLENGTH_8B
+USART2.IPParameters=VirtualMode-Asynchronous,WordLength
+USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART2.WordLength=WORDLENGTH_8B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
-VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=CameraDriver
