Ball Plate Driver finish

--- a/CameraDriver.ioc
+++ b/CameraDriver.ioc
@@ -54,74 +54,79 @@ Mcu.Name=STM32F746I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PF0
 Mcu.Pin1=PF1
-Mcu.Pin10=PA6
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PB2
-Mcu.Pin14=PF11
-Mcu.Pin15=PF12
-Mcu.Pin16=PF13
-Mcu.Pin17=PF14
-Mcu.Pin18=PF15
-Mcu.Pin19=PG0
+Mcu.Pin10=PC2
+Mcu.Pin11=PC3
+Mcu.Pin12=PH5
+Mcu.Pin13=PA4
+Mcu.Pin14=PA6
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB2
+Mcu.Pin18=PF11
+Mcu.Pin19=PF12
 Mcu.Pin2=PF2
-Mcu.Pin20=PG1
-Mcu.Pin21=PE7
-Mcu.Pin22=PE8
-Mcu.Pin23=PE9
-Mcu.Pin24=PE10
-Mcu.Pin25=PE11
-Mcu.Pin26=PE12
-Mcu.Pin27=PE13
-Mcu.Pin28=PE14
-Mcu.Pin29=PE15
+Mcu.Pin20=PF13
+Mcu.Pin21=PF14
+Mcu.Pin22=PF15
+Mcu.Pin23=PG0
+Mcu.Pin24=PG1
+Mcu.Pin25=PE7
+Mcu.Pin26=PE8
+Mcu.Pin27=PE9
+Mcu.Pin28=PE10
+Mcu.Pin29=PE11
 Mcu.Pin3=PF3
-Mcu.Pin30=PB10
-Mcu.Pin31=PB11
-Mcu.Pin32=PH6
-Mcu.Pin33=PH7
-Mcu.Pin34=PH11
-Mcu.Pin35=PH12
-Mcu.Pin36=PD8
-Mcu.Pin37=PD9
-Mcu.Pin38=PD10
-Mcu.Pin39=PD14
+Mcu.Pin30=PE12
+Mcu.Pin31=PE13
+Mcu.Pin32=PE14
+Mcu.Pin33=PE15
+Mcu.Pin34=PB10
+Mcu.Pin35=PB11
+Mcu.Pin36=PH6
+Mcu.Pin37=PH7
+Mcu.Pin38=PH11
+Mcu.Pin39=PH12
 Mcu.Pin4=PF4
-Mcu.Pin40=PD15
-Mcu.Pin41=PG4
-Mcu.Pin42=PG5
-Mcu.Pin43=PG8
-Mcu.Pin44=PC6
-Mcu.Pin45=PC7
-Mcu.Pin46=PC8
-Mcu.Pin47=PC9
-Mcu.Pin48=PA8
-Mcu.Pin49=PA9
+Mcu.Pin40=PD8
+Mcu.Pin41=PD9
+Mcu.Pin42=PD10
+Mcu.Pin43=PD14
+Mcu.Pin44=PD15
+Mcu.Pin45=PG4
+Mcu.Pin46=PG5
+Mcu.Pin47=PG8
+Mcu.Pin48=PC6
+Mcu.Pin49=PC7
 Mcu.Pin5=PF5
-Mcu.Pin50=PA10
-Mcu.Pin51=PH14
-Mcu.Pin52=PD0
-Mcu.Pin53=PD1
-Mcu.Pin54=PD3
-Mcu.Pin55=PD5
-Mcu.Pin56=PD6
-Mcu.Pin57=PG9
-Mcu.Pin58=PG15
-Mcu.Pin59=PB4
+Mcu.Pin50=PC8
+Mcu.Pin51=PC9
+Mcu.Pin52=PA8
+Mcu.Pin53=PA9
+Mcu.Pin54=PA10
+Mcu.Pin55=PH14
+Mcu.Pin56=PD0
+Mcu.Pin57=PD1
+Mcu.Pin58=PD3
+Mcu.Pin59=PD5
 Mcu.Pin6=PH0/OSC_IN
-Mcu.Pin60=PB5
-Mcu.Pin61=PB6
-Mcu.Pin62=PB7
-Mcu.Pin63=PB8
-Mcu.Pin64=PB9
-Mcu.Pin65=PE0
-Mcu.Pin66=PE1
-Mcu.Pin67=VP_SYS_VS_Systick
-Mcu.Pin68=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin60=PD6
+Mcu.Pin61=PG9
+Mcu.Pin62=PG15
+Mcu.Pin63=PB3
+Mcu.Pin64=PB4
+Mcu.Pin65=PB5
+Mcu.Pin66=PB6
+Mcu.Pin67=PB7
+Mcu.Pin68=PB8
+Mcu.Pin69=PB9
 Mcu.Pin7=PH1/OSC_OUT
-Mcu.Pin8=PH5
-Mcu.Pin9=PA4
-Mcu.PinsNb=69
+Mcu.Pin70=PE0
+Mcu.Pin71=PE1
+Mcu.Pin72=VP_SYS_VS_Systick
+Mcu.Pin73=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin8=PC0
+Mcu.Pin9=PC1
+Mcu.PinsNb=74
 Mcu.UserConstants=
 Mcu.UserName=STM32F746IGTx
 MxCube.Version=4.22.0
@@ -130,6 +135,10 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -168,9 +177,13 @@ PB11.Locked=true
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=OLED_CS
+PB2.GPIO_Label=MOTOR_X_Direction
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=MOTOR_Y_Direction
+PB3.Locked=true
+PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=MOTOR_Y_Driver
 PB4.Locked=true
@@ -193,6 +206,30 @@ PB8.Signal=DCMI_D6
 PB9.Locked=true
 PB9.Mode=Slave_8_bits_External_Synchro
 PB9.Signal=DCMI_D7
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC0.GPIO_Label=REMOTE_A
+PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC0.GPIO_PuPd=GPIO_PULLUP
+PC0.Locked=true
+PC0.Signal=GPXTI0
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC1.GPIO_Label=REMOTE_B
+PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC1.GPIO_PuPd=GPIO_PULLUP
+PC1.Locked=true
+PC1.Signal=GPXTI1
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC2.GPIO_Label=REMOTE_C
+PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC2.GPIO_PuPd=GPIO_PULLUP
+PC2.Locked=true
+PC2.Signal=GPXTI2
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC3.GPIO_Label=REMOTE_D
+PC3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC3.GPIO_PuPd=GPIO_PULLUP
+PC3.Locked=true
+PC3.Signal=GPXTI3
 PC6.Locked=true
 PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
@@ -558,6 +595,14 @@ SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
 SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
