--- a/CameraDriver.ioc
+++ b/CameraDriver.ioc
@@ -39,8 +39,9 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DCMI
-Mcu.IP10=USART1
-Mcu.IP11=USART2
+Mcu.IP10=TIM12
+Mcu.IP11=USART1
+Mcu.IP12=USART2
 Mcu.IP2=DMA
 Mcu.IP3=FMC
 Mcu.IP4=I2C2
@@ -49,7 +50,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SYS
 Mcu.IP8=TIM3
 Mcu.IP9=TIM7
-Mcu.IPNb=12
+Mcu.IPNb=13
 Mcu.Name=STM32F746I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PF0
@@ -61,72 +62,74 @@ Mcu.Pin13=PA4
 Mcu.Pin14=PA6
 Mcu.Pin15=PB0
 Mcu.Pin16=PB1
-Mcu.Pin17=PB2
-Mcu.Pin18=PF11
-Mcu.Pin19=PF12
+Mcu.Pin17=PF11
+Mcu.Pin18=PF12
+Mcu.Pin19=PF13
 Mcu.Pin2=PF2
-Mcu.Pin20=PF13
-Mcu.Pin21=PF14
-Mcu.Pin22=PF15
-Mcu.Pin23=PG0
-Mcu.Pin24=PG1
-Mcu.Pin25=PE7
-Mcu.Pin26=PE8
-Mcu.Pin27=PE9
-Mcu.Pin28=PE10
-Mcu.Pin29=PE11
+Mcu.Pin20=PF14
+Mcu.Pin21=PF15
+Mcu.Pin22=PG0
+Mcu.Pin23=PG1
+Mcu.Pin24=PE7
+Mcu.Pin25=PE8
+Mcu.Pin26=PE9
+Mcu.Pin27=PE10
+Mcu.Pin28=PE11
+Mcu.Pin29=PE12
 Mcu.Pin3=PF3
-Mcu.Pin30=PE12
-Mcu.Pin31=PE13
-Mcu.Pin32=PE14
-Mcu.Pin33=PE15
-Mcu.Pin34=PB10
-Mcu.Pin35=PB11
-Mcu.Pin36=PH6
-Mcu.Pin37=PH7
-Mcu.Pin38=PH11
-Mcu.Pin39=PH12
+Mcu.Pin30=PE13
+Mcu.Pin31=PE14
+Mcu.Pin32=PE15
+Mcu.Pin33=PB10
+Mcu.Pin34=PB11
+Mcu.Pin35=PH6
+Mcu.Pin36=PH7
+Mcu.Pin37=PH11
+Mcu.Pin38=PH12
+Mcu.Pin39=PB13
 Mcu.Pin4=PF4
-Mcu.Pin40=PD8
-Mcu.Pin41=PD9
-Mcu.Pin42=PD10
-Mcu.Pin43=PD14
-Mcu.Pin44=PD15
-Mcu.Pin45=PG4
-Mcu.Pin46=PG5
-Mcu.Pin47=PG8
-Mcu.Pin48=PC6
-Mcu.Pin49=PC7
+Mcu.Pin40=PB14
+Mcu.Pin41=PB15
+Mcu.Pin42=PD8
+Mcu.Pin43=PD9
+Mcu.Pin44=PD10
+Mcu.Pin45=PD14
+Mcu.Pin46=PD15
+Mcu.Pin47=PG4
+Mcu.Pin48=PG5
+Mcu.Pin49=PG8
 Mcu.Pin5=PF5
-Mcu.Pin50=PC8
-Mcu.Pin51=PC9
-Mcu.Pin52=PA8
-Mcu.Pin53=PA9
-Mcu.Pin54=PA10
-Mcu.Pin55=PH14
-Mcu.Pin56=PD0
-Mcu.Pin57=PD1
-Mcu.Pin58=PD3
-Mcu.Pin59=PD5
+Mcu.Pin50=PC6
+Mcu.Pin51=PC7
+Mcu.Pin52=PC8
+Mcu.Pin53=PC9
+Mcu.Pin54=PA8
+Mcu.Pin55=PA9
+Mcu.Pin56=PA10
+Mcu.Pin57=PH14
+Mcu.Pin58=PD0
+Mcu.Pin59=PD1
 Mcu.Pin6=PH0/OSC_IN
-Mcu.Pin60=PD6
-Mcu.Pin61=PG9
-Mcu.Pin62=PG15
-Mcu.Pin63=PB3
-Mcu.Pin64=PB4
-Mcu.Pin65=PB5
-Mcu.Pin66=PB6
-Mcu.Pin67=PB7
-Mcu.Pin68=PB8
-Mcu.Pin69=PB9
+Mcu.Pin60=PD3
+Mcu.Pin61=PD5
+Mcu.Pin62=PD6
+Mcu.Pin63=PG9
+Mcu.Pin64=PG15
+Mcu.Pin65=PB3
+Mcu.Pin66=PB4
+Mcu.Pin67=PB5
+Mcu.Pin68=PB6
+Mcu.Pin69=PB7
 Mcu.Pin7=PH1/OSC_OUT
-Mcu.Pin70=PE0
-Mcu.Pin71=PE1
-Mcu.Pin72=VP_SYS_VS_Systick
-Mcu.Pin73=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin70=PB8
+Mcu.Pin71=PB9
+Mcu.Pin72=PE0
+Mcu.Pin73=PE1
+Mcu.Pin74=VP_SYS_VS_Systick
+Mcu.Pin75=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=74
+Mcu.PinsNb=76
 Mcu.UserConstants=
 Mcu.UserName=STM32F746IGTx
 MxCube.Version=4.22.0
@@ -135,10 +138,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -147,6 +146,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM7_IRQn=true\:4\:0\:true\:false\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=WiFi_Rx
@@ -176,10 +176,18 @@ PB10.Signal=I2C2_SCL
 PB11.Locked=true
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=MOTOR_X_Direction
-PB2.Locked=true
-PB2.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=MOTOR_X_Enable
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=MOTOR_X_Driver
+PB14.Locked=true
+PB14.Signal=S_TIM12_CH1
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=MOTOR_X_Direction
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=MOTOR_Y_Direction
 PB3.Locked=true
@@ -189,9 +197,9 @@ PB4.GPIO_Label=MOTOR_Y_Driver
 PB4.Locked=true
 PB4.Signal=S_TIM3_CH1
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=MOTOR_X_Driver
+PB5.GPIO_Label=MOTOR_Y_Enable
 PB5.Locked=true
-PB5.Signal=S_TIM3_CH2
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=MPU6050_SCL
 PB6.Locked=true
@@ -461,7 +469,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_DCMI_Init-DCMI-false-HAL,5-MX_I2C2_Init-I2C2-false-HAL,6-MX_FMC_Init-FMC-false-HAL,7-MX_TIM7_Init-TIM7-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_USART1_UART_Init-USART1-false-HAL,10-MX_USART2_UART_Init-USART2-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_DCMI_Init-DCMI-false-HAL,5-MX_I2C2_Init-I2C2-false-HAL,6-MX_FMC_Init-FMC-false-HAL,7-MX_TIM7_Init-TIM7-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_USART1_UART_Init-USART1-false-HAL,10-MX_USART2_UART_Init-USART2-false-HAL,11-MX_TIM12_Init-TIM12-false-HAL
 RCC.AHBFreq_Value=200000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=50000000
@@ -603,23 +611,31 @@ SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
+SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
+SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
-SH.S_TIM3_CH2.ConfNb=1
+TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
+TIM12.Period=100-1
+TIM12.Prescaler=100-1
+TIM12.Pulse-PWM\ Generation1\ CH1=50
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
-TIM3.Period=1000-1
-TIM3.Prescaler=200-1
-TIM3.Pulse-PWM\ Generation1\ CH1=500
-TIM3.Pulse-PWM\ Generation2\ CH2=500
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
+TIM3.Period=100-1
+TIM3.Prescaler=100-1
+TIM3.Pulse-PWM\ Generation1\ CH1=50
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=1000-1
 TIM7.Prescaler=100-1
-USART1.IPParameters=VirtualMode-Asynchronous
+USART1.DMADisableonRxErrorParam=UART_ADVFEATURE_DMA_DISABLEONRXERROR
+USART1.IPParameters=VirtualMode-Asynchronous,WordLength,OverrunDisableParam,DMADisableonRxErrorParam
+USART1.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART2.IPParameters=VirtualMode-Asynchronous,WordLength
+USART1.WordLength=WORDLENGTH_8B
+USART2.DMADisableonRxErrorParam=UART_ADVFEATURE_DMA_DISABLEONRXERROR
+USART2.IPParameters=VirtualMode-Asynchronous,WordLength,OverrunDisableParam,DMADisableonRxErrorParam
+USART2.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
 VP_SYS_VS_Systick.Mode=SysTick
