--- a/CameraDriver.ioc
+++ b/CameraDriver.ioc
@@ -135,10 +135,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -146,7 +142,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM7_IRQn=true\:4\:0\:true\:false\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=WiFi_Rx
@@ -442,7 +438,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=E\:/My works File/STM32Cube File/STM32CubeUpdate/STM32Cube_FW_F7_V1.7.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F746IGTx
@@ -617,8 +613,11 @@ TIM3.Pulse-PWM\ Generation2\ CH2=500
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=1000-1
 TIM7.Prescaler=100-1
-USART1.IPParameters=VirtualMode-Asynchronous
+USART1.DMADisableonRxErrorParam=UART_ADVFEATURE_DMA_DISABLEONRXERROR
+USART1.IPParameters=VirtualMode-Asynchronous,WordLength,OverrunDisableParam,DMADisableonRxErrorParam
+USART1.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART1.WordLength=WORDLENGTH_8B
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
